# 3-python-package-exercise-isomorphism1337

./: Pipfile  README.md  example.py  pyproject.toml  requirements.txt  setup.py  test_todo.py  todo.json  todolist.json
.github/workflows/: main.yml
src/todopkg/: __init__.py  __main__.py  todo.py  todopkg.py
tests/: test_todo.py
todo/: __init__.py
