[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "todopkg"
version = "1.0.1"
description = "A To-Do List manager package for managing your tasks efficiently."
authors = [
    { name = "Jiasheng Wang", email="jw6699@nyu.edu" },
    { name = "Fuzhen li", email = "fl2097@nyu.edu" }
]
readme = "README.md"
keywords = ["todo", "list", "project management"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "tabulate"
]

[project.urls]
homepage = "https://github.com/software-students-fall2023/3-python-package-exercise-isomorphism1337.git"